--- a/Image_clusters.ipynb
+++ b/Image_clusters.ipynb
@@ -234,7 +234,7 @@
     "                                       palette=Spectral10)\n",
     "\n",
     "plot_figure = figure(\n",
-    "    title='UMAP projection of the Digits dataset',\n",
+    "    title='UMAP projection',\n",
     "    plot_width=600,\n",
     "    plot_height=600,\n",
     "    tools=('pan, wheel_zoom, reset')\n",
